--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,26 @@
 @tailwind utilities;
 
 * {
-  
+
   /* color: rgb(46, 46, 160) */
   /* color: #149ea0; */
+  /* color: #22adaf; */
   /* color: 	rgb(159 18 57); */
 }
+
+body {
+  font-family: 'Abel', sans-serif;
+}
+
+.grup-font{
+  font-family: 'Gruppo', cursive; 
+
+}
+/* h1 {
+  text-align: center;
+  font-size: 4.3rem;
+  padding: 20px;
+} */
 
 h1,
 h2,
@@ -15,9 +30,9 @@ h3,
 h4,
 h5 {
   color: #149ea0;
-  /* color: #22adaf; */
 }
-.bg-blue-cos{
+
+.bg-blue-cos {
   background-color: #155b5c;
 }
 
@@ -33,15 +48,17 @@ label {
   color: black
 }
 
- .addtoCart {
+.addtoCart {
   background-color: #149ea0
 }
-input{
+
+input {
   color: black
 }
-.addtoCart:hover{
+
+.addtoCart:hover {
   color: #074c4f;
-  border:1px solid #074c4f;
+  border: 1px solid #074c4f;
   background-color: white;
 }
 
